--- a/src/index.hbs
+++ b/src/index.hbs
@@ -11,6 +11,7 @@
 <body>
   {{> partials/header}}
   {{> partials/homepage/index}}
+  {{> partials/footer}}
 </body>
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
