--- a/src/partials/homepage/sidebar.hbs
+++ b/src/partials/homepage/sidebar.hbs
@@ -1,7 +1,40 @@
 <aside class="fixed h-screen w-96 pl-32 pt-24">
-    <div class="h-64 sidebar_bg shadow-sm">
-      <h3>Year goals</h3>
-      <h3>Week goals</h3>
-      <h3>Today goals</h3>
-    </div>
-  </aside>
+  <div class="sidebar_bg shadow-sm">
+    <ul>
+      <li class='flex justify-between mb-5 text-xl courgetteFont text-gray-500 cursor-pointer font-semibold'>
+        <h3>
+          All goals
+        </h3>
+        <span>3/5</span>
+      </li>
+      <li class='flex justify-between mb-5 text-xl courgetteFont text-gray-500 cursor-pointer font-semibold'>
+        <h3>
+          Year goals
+        </h3>
+        <span>3/5</span>
+      </li>
+      <li class='flex justify-between mb-5 text-xl courgetteFont text-gray-500 cursor-pointer font-semibold'>
+        <h3>
+          Week goals
+        </h3>
+        <span>3/5</span>
+      </li>
+      <li class='flex justify-between mb-5 text-xl courgetteFont text-gray-500 cursor-pointer font-semibold'>
+        <h3>
+          Today goals
+        </h3>
+        <span>3/5</span>
+      </li>
+      <li class='flex justify-between mb-16 text-xl courgetteFont text-gray-500 cursor-pointer font-semibold'>
+        <h3>
+          Specific day goals
+        </h3>
+        <span>3/5</span>
+      </li>
+    </ul>
+
+    <blockquote>
+      True success is all about working towards meaningful goals and dreams.
+    </blockquote>
+  </div>
+</aside>
