--- a/src/partials/footer.hbs
+++ b/src/partials/footer.hbs
@@ -2,22 +2,22 @@
 
   <div class='flex'>
     <div class='flex-1 flex justify-center items-center'>
-      <img alt="eman" id='eman' class='h-16 w-16 rounded-full mr-4'>
-      <div class="flex flex-col">
+      <img alt="eman" id='eman' class='h-10 w-10 rounded-full mr-4'>
+      <div class="flex">
         <a href="https://github.com/emasdev" target="_blank"
-          class='mb-2 px-4 p-1 bg-gradient-to-r from-green-400 to-blue-500 hover:from-green-400 hover:to-blue-700'>Github</a>
+          class='mr-2 px-4 p-1 bg-gradient-to-r from-green-400 to-blue-500 hover:from-green-400 hover:to-blue-700'>Github</a>
         <a href="https://www.linkedin.com/in/emasdev/" target="_blank"
           class='px-4 p-1 bg-gradient-to-r from-green-400 to-blue-500 hover:from-green-400 hover:to-blue-700'>Linkedin</a>
       </div>
     </div>
     <p class='flex-1 flex justify-center items-center'>
-      Made with <span style="color: #e25555;">&#9829;</span> by Emanuel and Mike
+      Made with <span style="color: #e25555" class='text-3xl px-2'>&#9829;</span> by Emanuel and Mike
     </p>
     <div class='flex-1 flex justify-center items-center'>
-      <img alt="mike" id='mike' class='h-16 w-16 rounded-full mr-4'>
-      <div class="flex flex-col">
+      <img alt="mike" id='mike' class='h-10 w-10 rounded-full mr-4'>
+      <div class="flex">
         <a href="https://github.com/MkrtichSargsyan" target="_blank"
-          class='px-4 p-1 mb-2 bg-gradient-to-r from-green-400 to-blue-500 hover:from-green-400 hover:to-blue-700'>Github</a>
+          class='mr-2 px-4 p-1 bg-gradient-to-r from-green-400 to-blue-500 hover:from-green-400 hover:to-blue-700'>Github</a>
         <a href="https://www.linkedin.com/in/mkrtich-sargsyan/" target="_blank"
           class='px-4 p-1 bg-gradient-to-r from-green-400 to-blue-500 hover:from-green-400 hover:to-blue-700'>Linkedin</a>
       </div>
