--- a/src/partials/homepage/index.hbs
+++ b/src/partials/homepage/index.hbs
@@ -1,6 +1,4 @@
 <main class="bg-gray-50 h-screen pt-14 flex flex-row">
   {{> sidebar}}
-  {{> projects}}
-  {{!-- {{> partials/homepage/sidebar}}
-  {{> partials/homepage/projects}} --}}
+  {{> projects/projectsList}}
 </main>
