Fix white area issue on home page

--- a/src/partials/homepage/projects/projectsList.hbs
+++ b/src/partials/homepage/projects/projectsList.hbs
@@ -1,5 +1,8 @@
-<div class="h-screen ml-96 flex-1 pt-24 px-12 pr-32">
+<div class="ml-96 flex-1 py-24 px-12 pr-32">
   <div class="w-full flex flex-wrap">    
+    {{> singleProject}}
+    {{> singleProject}}
+    {{> singleProject}}
     {{> singleProject}}
     {{> singleProject}}
     {{> singleProject}}
