--- a/src/partials/homepage/index.hbs
+++ b/src/partials/homepage/index.hbs
@@ -1,4 +1,4 @@
-<main class="bg-gray-50 h-screen pt-14 flex flex-row">
+<main class="bg-gray-50 min-h-screen pt-14 flex flex-row">
   {{> sidebar}}
   {{> projects/projectsList}}
 </main>
