add delete and edit icons

--- a/src/partials/homepage/projects/singleProject.hbs
+++ b/src/partials/homepage/projects/singleProject.hbs
@@ -23,10 +23,8 @@
           Author Name
         </p>
       </a>
-      <a class="no-underline text-grey-darker hover:text-red-dark" href="#">
-        <span class="hidden">Like</span>
-        <i class="fa fa-heart"></i>
-      </a>
+      <img src="https://img.icons8.com/android/24/000000/edit.png"/>
+      <img src="https://img.icons8.com/ios-filled/24/000000/delete-forever.png"/>
     </footer>
 
   </article>
