--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -1,4 +1,4 @@
-<header class="z-10 w-full fixed p-2 header_bg">
+<header class="z-10 w-full fixed p-2 px-8 header_bg">
   <nav class="flex justify-between h-10">
     <div class='flex flex-1'>
       <img class='h-full mr-4' src="https://img.icons8.com/cotton/512/ffffff/home--v1.png" />
@@ -11,7 +11,7 @@
     </div>
     <div class='h-full flex-1 justify-center'><img class='h-full m-auto' id="logo" alt="logo" /></div>
     <div class='flex flex-1 justify-end items-center'>
-      <img class='h-4/5' src="https://img.icons8.com/ultraviolet/480/ffffff/plus.png" />
+      <img class='h-4/5 mr-4' src="https://img.icons8.com/ultraviolet/480/ffffff/plus.png" />
       <img src="https://img.icons8.com/doodle/50/000000/user-male.png" />
     </div>
   </nav>
