- Add projects controller to generateProjects and inject them into the DOM

--- a/src/partials/homepage/projects/projectsList.hbs
+++ b/src/partials/homepage/projects/projectsList.hbs
@@ -1,5 +1,6 @@
 <div class="ml-96 flex-1 py-24 px-12 pr-32">
-  <div class="w-full flex flex-wrap">    
+  <div class="w-full flex flex-wrap" id="projects-container">
+    {{!-- {{> singleProject}}
     {{> singleProject}}
     {{> singleProject}}
     {{> singleProject}}
@@ -9,7 +10,6 @@
     {{> singleProject}}
     {{> singleProject}}
     {{> singleProject}}
-    {{> singleProject}}
-    {{> singleProject}}
+    {{> singleProject}} --}}
   </div>
 </div>
