Add modal to add new goal

--- a/src/partials/homepage/index.hbs
+++ b/src/partials/homepage/index.hbs
@@ -1,4 +1,5 @@
 <main class="bg-gray-50 min-h-screen pt-14 flex flex-row">
   {{> sidebar}}
   {{> projects/projectsList}}
+  {{> projects/projectForm}}
 </main>
