--- a/src/partials/homepage/projects/projectForm.hbs
+++ b/src/partials/homepage/projects/projectForm.hbs
@@ -34,7 +34,7 @@
         <div class="sm:flex sm:items-start">
           <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
             <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">
-              Add new project
+              Add new goal
             </h3>
             <div class="mt-2">
               <form action="#" method="POST">
@@ -44,14 +44,14 @@
 
 
                       <div class="">
-                        <label for="project-title" class="block text-sm font-medium text-gray-700">Title</label>
-                        <input type="text" name="project-title" id="project-title"
+                        <label for="goal-title" class="block text-sm font-medium text-gray-700">Title</label>
+                        <input type="text" name="goal-title" id="goal-title"
                           class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm border-gray-300 rounded-md">
                       </div>
 
                       <div class="">
-                        <label for="country" class="block text-sm font-medium text-gray-700">Due date</label>
-                        <select id="country" name="country" autocomplete="country"
+                        <label for="goal-category" class="block text-sm font-medium text-gray-700">Due date</label>
+                        <select id="goal-category" name="goal-category"
                           class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
                           <option selected>Unspecified</option>
                           <option value="Year Goal">Year Goal</option>
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
-        <button type="button"
+        <button type="button" id="add-goal-btn"
           class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-green-600 text-base font-medium text-white hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm">
           Add
         </button>
