--- a/src/partials/homepage/sidebar.hbs
+++ b/src/partials/homepage/sidebar.hbs
@@ -2,33 +2,33 @@
   <div class="sidebar_bg shadow-sm">
     <ul>
       <li class='flex justify-between mb-5 text-xl courgetteFont text-gray-500 cursor-pointer font-semibold'>
-        <h3>
-          All goals
-        </h3>
-        <span id='all'></span>
+        <h3> All goals</h3>
+        <span id='all' />
       </li>
       <li class='flex justify-between mb-5 text-xl courgetteFont text-gray-500 cursor-pointer font-semibold'>
-        <h3>
-          Year goals
-        </h3>
-        <span id='year'></span>
+        <h3>Year goals</h3>
+        <span id='year' />
       </li>
       <li class='flex justify-between mb-5 text-xl courgetteFont text-gray-500 cursor-pointer font-semibold'>
-        <h3>
-          Week goals
-        </h3>
-        <span id='week'></span>
+        <h3>Week goals</h3>
+        <span id='week' />
       </li>
       <li class='flex justify-between mb-5 text-xl courgetteFont text-gray-500 cursor-pointer font-semibold'>
-        <h3>
-          Today goals
-        </h3>
-        <span id='today'></span>
+        <h3>Today goals</h3>
+        <span id='today' />
       </li>
     </ul>
 
-    <blockquote>
-      True success is all about working towards meaningful goals and dreams.
-    </blockquote>
+    <div id="ct">
+      <div class="corner " id="left_top"></div>
+      <div class="corner" id="left_bottom"></div>
+      <div class="corner" id="right_top"></div>
+      <div class="corner" id="right_bottom"></div>
+      <span>Winston Churchill</span>
+      <blockquote>
+        <p><i>&ldquo;Success consists of going from failure to failure without loss of enthusiasm.&rdquo; </i></p>
+      </blockquote>
+    </div>
+
   </div>
 </aside>
