add babel loader

--- a/src/partials/homepage/sidebar.hbs
+++ b/src/partials/homepage/sidebar.hbs
@@ -1,5 +1,5 @@
 <aside class="fixed h-screen w-96 pl-32 pt-24">
-  <div class="sidebar_bg shadow-sm">
+  <div class="sidebar_bg bg-gray-200 shadow-sm">
     <ul>
       <li class='flex justify-between mb-5 text-xl courgetteFont text-gray-500 cursor-pointer font-semibold'>
         <h3> All goals</h3>
