--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -11,7 +11,7 @@
     </div>
     <div class='h-full flex-1 justify-center'><img class='h-full m-auto' id="logo" alt="logo" /></div>
     <div class='flex flex-1 justify-end items-center'>
-      <img id="open-modal-btn" class='h-4/5 mr-4' src="https://img.icons8.com/ultraviolet/480/ffffff/plus.png" />
+      <img id="open-modal-btn" class='h-4/5 mr-4 transform hover:scale-110' src="https://img.icons8.com/ultraviolet/480/ffffff/plus.png" />
       <img src="https://img.icons8.com/doodle/50/000000/user-male.png" />
     </div>
   </nav>
