--- a/src/partials/homepage/sidebar.hbs
+++ b/src/partials/homepage/sidebar.hbs
@@ -19,7 +19,7 @@
       </li>
     </ul>
 
-    <div id="ct">
+    <div id="ct" class='mt-12'>
       <div class="corner " id="left_top"></div>
       <div class="corner" id="left_bottom"></div>
       <div class="corner" id="right_top"></div>
