--- a/src/css/customStyles.css
+++ b/src/css/customStyles.css
@@ -32,7 +32,6 @@ aside li:hover {
   background-color: rgb(14, 13, 13);
   width: 100%;
   border: 1px solid #f1c40f;
-  margin: 100px auto;
   text-align: center;
   position: relative;
   color: #fff;
@@ -82,4 +81,32 @@ aside li:hover {
 }
 #ct p i{
   color: white;
+}
+
+
+
+/* loader */
+
+.loader {
+	border-top-color: #3498db;
+	-webkit-animation: spinner 1.5s linear infinite;
+	animation: spinner 1.5s linear infinite;
+}
+
+@-webkit-keyframes spinner {
+	0% {
+		-webkit-transform: rotate(0deg);
+	}
+	100% {
+		-webkit-transform: rotate(360deg);
+	}
+}
+
+@keyframes spinner {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
