--- a/src/partials/homepage/projects/projectForm.hbs
+++ b/src/partials/homepage/projects/projectForm.hbs
@@ -16,6 +16,7 @@
             <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">
               Add new goal
             </h3>
+            <p class='text-red-500 hidden dangerAlert'>Wrong input</p>
             <div class="mt-2">
               <form action="#" method="POST">
                 <div class="shadow overflow-hidden sm:rounded-md">
@@ -30,10 +31,10 @@
                       </div>
 
                       <div class="">
-                        <label for="goal-category" class="block text-sm font-medium text-gray-700">Due date</label>
+                        <label for="goal-category" class="block text-sm font-medium text-gray-700">Category</label>
                         <select id="goal-category" name="goal-category"
                           class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-                          <option value="all" selected>All goals</option>
+                          <option value="all" disabled selected>Select date</option>
                           <option value="year">Year Goal</option>
                           <option value="week">Week Goal</option>
                           <option value="today">Today Goal</option>
