Add remove goals

--- a/src/partials/homepage/index.hbs
+++ b/src/partials/homepage/index.hbs
@@ -1,5 +1,6 @@
 <main class="bg-gray-50 min-h-screen pt-14 flex flex-row">
   {{> sidebar }}
   {{> projects/projectsList}}
-  {{> projects/projectForm}}
+  {{> ../modals/projectForm}}
+  {{> ../modals/warningModal}}
 </main>
