--- a/src/index.hbs
+++ b/src/index.hbs
@@ -12,7 +12,7 @@
 
 <body>
   {{> partials/header}}
-  {{> partials/homepage/index}}
+  {{> pages/homepage/index }}
   {{> partials/footer}}
 </body>
 
