Add promise to renderGoal to then add click events

--- a/src/partials/homepage/sidebar.hbs
+++ b/src/partials/homepage/sidebar.hbs
@@ -1,21 +1,21 @@
 <aside class="fixed h-screen w-96 pl-32 pt-24">
   <div class="sidebar_bg bg-gray-200 shadow-sm">
-    <ul id='sidebar-links'>
+    <ul>
       <li class='flex justify-between mb-5 text-xl courgetteFont text-gray-500 cursor-pointer font-semibold'>
         <h3>All goals</h3>
-        <span id='all' />
+        <span id='goals-all' />
       </li>
       <li class='flex justify-between mb-5 text-xl courgetteFont text-gray-500 cursor-pointer font-semibold'>
         <h3>Year goals</h3>
-        <span id='year' />
+        <span id='goals-year' />
       </li>
       <li class='flex justify-between mb-5 text-xl courgetteFont text-gray-500 cursor-pointer font-semibold'>
         <h3>Week goals</h3>
-        <span id='week' />
+        <span id='goals-week' />
       </li>
       <li class='flex justify-between mb-5 text-xl courgetteFont text-gray-500 cursor-pointer font-semibold'>
         <h3>Today goals</h3>
-        <span id='today' />
+        <span id='goals-today' />
       </li>
     </ul>
 
