--- a/src/index.hbs
+++ b/src/index.hbs
@@ -13,10 +13,10 @@
 <body>
   {{> partials/header}}
   <main class="bg-gray-50 min-h-screen flex flex-row">
-    <div id='homepage-content'>
+    <div id='homepage-content' class='pt-12'>
       {{> pages/homepage/index }}
     </div>
-    <div id='goalpage-content'>
+    <div id='goalpage-content' class="bg-blue-100 flex flex-row w-full">
       {{> pages/goalpage/index }}
     </div>
   </main>
