--- a/src/pages/goalpage/allTasks.hbs
+++ b/src/pages/goalpage/allTasks.hbs
@@ -8,7 +8,10 @@
 
         <div
           class="bg-white hover-trigger p-2 rounded mt-1 border-b border-grey cursor-pointer hover:bg-grey-lighter flex justify-between">
+          <div class='flex items-center'>
+            <input type="checkbox" name="done" class='cursor-pointer mr-2 done' value="Done">
             <p>Do 100 push ups</p>
+          </div>
           <div id='icon' class='hover-target justify-between'>
             <img class='mr-2 transition duration-500 ease-in-out hover:bg-gray-100 transform  hover:scale-150'
               src="https://img.icons8.com/dotty/16/000000/edit.png" />
@@ -24,30 +27,4 @@
       </div>
     </div>
   </div>
-
-
-  <div class="w-full p-8 font-sans">
-    <div class="rounded bg-gray-300 w-64 p-2">
-      <div class="flex justify-between py-1">
-        <h3 class="text-sm">Doing</h3>
-      </div>
-      <div class="text-sm mt-2">
-        {{!-- add here --}}
-
-      </div>
-    </div>
-  </div>
-
-   <div class="w-full p-8 font-sans">
-    <div class="rounded bg-gray-300 w-64 p-2">
-      <div class="flex justify-between py-1">
-        <h3 class="text-sm">Done</h3>
-      </div>
-      <div class="text-sm mt-2">
-        {{!-- add here --}}
-
-      </div>
-    </div>
-  </div>
-
 </div>
