--- a/src/css/customStyles.css
+++ b/src/css/customStyles.css
@@ -120,3 +120,13 @@ aside li:hover {
 .hover-trigger:hover .hover-target {
   display: flex;
 }
+
+/* drag */
+
+.dropzone{
+  min-height: 40px;
+}
+
+.dottedBorder{
+  border: 1px dotted black;
+}
