--- a/src/partials/header.hbs
+++ b/src/partials/header.hbs
@@ -1,7 +1,10 @@
 <header class="z-10 w-full fixed p-2 px-8 header_bg">
   <nav class="flex justify-between h-10">
     <div class='flex flex-1'>
-      <img class='h-full mr-4' src="https://img.icons8.com/cotton/512/ffffff/home--v1.png" />
+      {{!-- <img class='h-full mr-4' src="https://img.icons8.com/cotton/512/ffffff/home--v1.png" /> --}}
+      <a href="#/" style="width: 70px;">
+        <img class='h-full mr-4' src="https://img.icons8.com/cotton/512/ffffff/home--v1.png" />
+      </a>
       <div class="shadow flex h-full">
         <input class="w-full rounded p-2" type="text" placeholder="Search...">
         <button class="bg-white w-auto flex justify-end items-center text-blue-500 p-2 hover:text-blue-400">
@@ -11,7 +14,8 @@
     </div>
     <div class='h-full flex-1 justify-center'><img class='h-full m-auto' id="logo" alt="logo" /></div>
     <div class='flex flex-1 justify-end items-center'>
-      <img id="open-modal-btn" class='h-4/5 mr-4 transform hover:scale-110' src="https://img.icons8.com/ultraviolet/480/ffffff/plus.png" />
+      <img id="open-modal-btn" class='h-4/5 mr-4 transform hover:scale-110'
+        src="https://img.icons8.com/ultraviolet/480/ffffff/plus.png" />
       <img src="https://img.icons8.com/doodle/50/000000/user-male.png" />
     </div>
   </nav>
