Add steps into goals

--- a/src/pages/goalpage/index.hbs
+++ b/src/pages/goalpage/index.hbs
@@ -4,9 +4,9 @@
       <div class="flex justify-between py-1">
         <h3 class="text-sm">Project name</h3>
       </div>
-      <div class="droppable dropzone text-sm mt-2">
+      <div class="droppable dropzone text-sm mt-2" id="steps-undone">
 
-        <div id="draggable" draggable="true" ondragstart="event.dataTransfer.setData('text/plain',null)"
+        {{!-- <div id="draggable" draggable="true" ondragstart="event.dataTransfer.setData('text/plain',null)"
           class="draggable bg-white hover-trigger p-2 rounded mt-1 border-b border-grey cursor-pointer hover:bg-grey-lighter flex justify-between">
           <p>Do 100 push ups</p>
           <div id='icon' class='hover-target justify-between'>
@@ -15,7 +15,7 @@
             <img class='transition duration-500 ease-in-out hover:bg-gray-100 transform  hover:scale-150'
               src="https://img.icons8.com/dotty/16/000000/trash.png" />
           </div>
-        </div>
+        </div> --}}
 
       </div>
 
