--- a/src/pages/goalpage/index.hbs
+++ b/src/pages/goalpage/index.hbs
@@ -20,7 +20,8 @@
       </div>
 
       <div class='my-2 mt-4'>
-        <p class="mt-4 text-gray-400 w-max ml-4 hover:text-gray-800 cursor-pointer">+ Add a step...</p>
+        <p class="mt-4 text-gray-400 w-max ml-4 hover:text-gray-800 cursor-pointer" id="add-step-btn">+ Add a step...
+        </p>
       </div>
     </div>
   </div>
@@ -31,7 +32,7 @@
       <div class="flex justify-between py-1">
         <h3 class="text-sm">Doing</h3>
       </div>
-      <div class="droppable dropzone text-sm my-2 h-24">
+      <div class="droppable dropzone text-sm my-2 min-h-full" id="steps-doing">
 
 
 
@@ -44,7 +45,7 @@
       <div class="flex justify-between py-1">
         <h3 class="text-sm">Done</h3>
       </div>
-      <div class="droppable dropzone text-sm my-2 h-24">
+      <div class="droppable dropzone text-sm my-2 min-h-full" id="steps-done">
 
       </div>
     </div>
